# ml-theory

./: .gitignore  README.md  pyproject.toml
course/: README.md
data/: README.md
exams/: README.md
exams/01/: README.md  notebook.ipynb
exams/01/solutions/: README.md
exams/01/solutions/artifacts/: numeric_results.json
exams/01/solutions/code/: README.md  solve_exam_01.py
exams/01/solutions/derivations/: solution.md  solution.tex
midterms/: README.md
midterms/01/notebooks/: 01-regression.ipynb  02-rkhs.ipynb  03-geometry.ipynb
ml_theory_course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: empirical.ipynb
notes/: README.md
project/: README.md
src/: README.md
workshops/: README.md
workshops/01-regressors/: README.md
workshops/02-rkhs/: README.md  notebook.ipynb
workshops/03-housing/: notebook.ipynb
workshops/03-model-comparison/: notebook.ipynb
workshops/04-classification/: notebook.ipynb
workshops/04-data-processing/: README.md  notebook.ipynb  primer_streamlit.py  segundo_streamlit.py
