[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-theory-course"
version = "0.1.0"
description = "Course materials, derivations, and experiments for Machine Learning Theory at Universidad Nacional de Colombia."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.4",
]
