[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-theory-course"
version = "0.1.0"
description = "Course materials, derivations, and experiments for Machine Learning Theory at Universidad Nacional de Colombia."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.4",
    "scikit-learn>=1.8",
]

[project.optional-dependencies]
notebooks = [
    "gdown>=5.2",
    "ipywidgets>=8.1",
    "jupyterlab>=4.4",
    "notebook>=7.4",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "plotly>=6.0",
    "seaborn>=0.13",
    "streamlit>=1.41",
]

[tool.setuptools]
py-modules = []
